<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgCouponDetail"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline9"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:srcCompat="@tools:sample/avatars[14]" />

        <TextView
            android:id="@+id/tvTitleDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/text_empty"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDescriptionShortDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/text_empty"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleDetail" />

        <TextView
            android:id="@+id/tvCategoryDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_rounded_corner_category"
            android:gravity="start|center_vertical"
            android:padding="7dp"
            android:text="@string/text_empty"
            android:textColor="#1565C0"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/tvDescriptionShortDetail" />

        <TextView
            android:id="@+id/tvDateDetail"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_rounded_corner_deadline"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/text_empty"
            android:textColor="#d11940"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/tvCategoryDetail" />

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline5"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.23"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline9"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.21"/>

        <ImageView
            android:id="@+id/imgHeaderDetail"
            android:layout_width="386dp"
            android:layout_height="145dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline9"
            tools:srcCompat="@tools:sample/backgrounds/scenic[4]"
            tools:ignore="ContentDescription" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgHeaderDetail">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/tvHeadDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/text_offer_details"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvDescriptionDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/text_description"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvHeadDetail" />

                <TextView
                    android:id="@+id/tvOfferDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/text_offer"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvDescriptionDetailData" />

                <TextView
                    android:id="@+id/tvWebsiteDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/text_website"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvOfferDetailData" />

                <TextView
                    android:id="@+id/tvDateEndDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="24dp"
                    android:text="@string/text_valid_until"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvWebsiteDetailData" />

                <TextView
                    android:id="@+id/tvDescriptionDetailData"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/text_empty"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/imageView3"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/tvDateEndDetail"
                    app:layout_constraintTop_toBottomOf="@+id/tvHeadDetail" />

                <TextView
                    android:id="@+id/tvOfferDetailData"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/text_empty"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/imageView4"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/tvDateEndDetail"
                    app:layout_constraintTop_toBottomOf="@+id/tvDescriptionDetailData" />

                <TextView
                    android:id="@+id/tvWebsiteDetailData"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/text_empty"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/imageView6"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/tvDateEndDetail"
                    app:layout_constraintTop_toBottomOf="@+id/tvOfferDetailData" />

                <TextView
                    android:id="@+id/tvDateEndData"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/text_empty"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/imageView7"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/tvDateEndDetail"
                    app:layout_constraintTop_toBottomOf="@+id/tvWebsiteDetailData" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="23dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:background="#2CBAF1"
                    app:layout_constraintBottom_toBottomOf="@+id/tvDescriptionDetailData"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tvDescriptionDetailData"
                    app:srcCompat="@android:drawable/stat_notify_chat"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="23dp"
                    android:layout_height="27dp"
                    android:background="#2CBAF1"
                    app:layout_constraintBottom_toBottomOf="@+id/tvOfferDetailData"
                    app:layout_constraintEnd_toEndOf="@+id/imageView3"
                    app:layout_constraintStart_toStartOf="@+id/imageView3"
                    app:layout_constraintTop_toTopOf="@+id/tvOfferDetailData"
                    app:srcCompat="@android:drawable/ic_menu_compass"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="23dp"
                    android:layout_height="27dp"
                    android:background="#2CBAF1"
                    app:layout_constraintBottom_toBottomOf="@+id/tvWebsiteDetailData"
                    app:layout_constraintEnd_toEndOf="@+id/imageView4"
                    app:layout_constraintStart_toStartOf="@+id/imageView4"
                    app:layout_constraintTop_toTopOf="@+id/tvWebsiteDetailData"
                    app:srcCompat="@android:drawable/ic_menu_edit"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="23dp"
                    android:layout_height="27dp"
                    android:background="#2CBAF1"
                    app:layout_constraintBottom_toBottomOf="@+id/tvDateEndData"
                    app:layout_constraintEnd_toEndOf="@+id/imageView6"
                    app:layout_constraintStart_toStartOf="@+id/imageView6"
                    app:layout_constraintTop_toTopOf="@+id/tvDateEndData"
                    app:srcCompat="@android:drawable/ic_menu_month"
                    tools:ignore="ContentDescription" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnOpenOffer"
            style="@style/btnOpenOffer"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/button_get_offer"
            android:textColor="#A1887F"
            android:theme="@style/btnOpenOffer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>